# official-website

./: .gitignore  README.md  bun.lockb  index.html  package.json  pyproject.toml  rxconfig.py  tailwind.config.js  tsconfig.json
official_website/: meta.py  official_website.py
official_website/layouts/: __init__.py  footer.py  header.py  layout.py  main.py
official_website/pages/: __init__.py  about.py  document.py  index.py  product.py
public/: robots.txt  sitemap.xml
src/: App.tsx  index.css  main.tsx
src/components/: BlinkingCursor.tsx
src/components/animation/: count.tsx  repeat-typing.tsx  typing.tsx
src/components/ui/: avatar.tsx  button.tsx
src/contexts/: theme-provider.tsx
src/hooks/: theme-hook.tsx
src/pages/contact/: index.tsx
src/pages/hero/: HeroSummary.tsx  index.tsx
src/pages/layouts/: Layout.tsx  LayoutContent.tsx  LayoutFooter.tsx  LayoutHeader.tsx  index.ts
src/pages/portfolio/: PortfolioCard.tsx  index.tsx
src/pages/resume/: ResumeCard.tsx  ResumeCardToggle.tsx  ResumeExperience.tsx  index.tsx
src/pages/services/: ServiceCard.tsx  index.tsx
src/styles/: flex.css
